--- a/contrib/kafka9/examples/src/java/BUILD
+++ b/contrib/kafka9/examples/src/java/BUILD
@@ -24,3 +24,17 @@ java_binary(
     ],
 )
 
+java_binary(
+    name = "streaming-library-demo",
+    srcs = glob(["com/twitter/heron/StreamingLibraryDemo.java", "com/twitter/heron/StreamingLibraryBolt.java"]),
+    main_class = "com.twitter.heron.StreamingLibraryDemo",
+    deps = [
+        "//3rdparty/streaming-library:streaming-library-java",
+        "//heron/api/src/java:api-java-nl",
+        "//contrib/kafka9/heron-kafka/src/java:heron-kafka-08-java",
+        "//contrib/kafka9/heron-kafka/src/java:heron-kafka-common-java",
+        "//3rdparty/logging:slf4j-api-java"
+    ],
+)
+
+
